# SimpleXmlValidator

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.en.md  README.md  main.cpp  resources.qrc  vcpkg.json
.github/workflows/: ci.yml  release.yml
docs/: XML语法校验工具-设计方案文档.md  概要设计报告.md  模块实施计划.md  项目编码规范.md
docs/docpics/: system_overall_architecture.drawio  system_process_flow.drawio
docs/projs/: api_learn.md  异常处理.md  技术选型和主要功能模块.md  环境配置.md
docs/ui_raw/: Qt_UI_代码整体架构图.drawio  Qt_图标显示逻辑_简要架构图.drawio  ui说明.md  主界面-初始状态.drawio  主界面-校验失败.drawio  主界面-校验成功.drawio  图标资源清单.md
src/core/validation/: InputValidator.cpp  InputValidator.h  ValidationResult.h  XmlValidator.cpp  XmlValidator.h
src/gui/: CodeEditor.cpp  CodeEditor.h  MainWindow.cpp  MainWindow.h  Style.cpp  Style.h  ValidationResultPresenter.cpp  ValidationResultPresenter.h  XmlSyntaxHighlighter.cpp  XmlSyntaxHighlighter.h  resources.qrc  style.qss
src/infrastructure/logging/: Logger.cpp  Logger.h  ValidationLog.cpp  ValidationLog.h
src/infrastructure/xerces/: LocalResourceResolver.cpp  LocalResourceResolver.h  XercesErrorHandler.cpp  XercesErrorHandler.h  XercesRuntime.cpp  XercesRuntime.h  XercesSchemaValidator.cpp  XercesSchemaValidator.h  XercesString.cpp  XercesString.h  XercesUri.cpp  XercesUri.h
test/: 测试说明.md
test/xml/invalid/: A2_missing_QueryTime_element.xml  A2_missing_appname_attr.xml  A2_point_missing_other_attr.xml  A2_zone_invalid_IsDifferent.xml  A2_zone_missing_Value.xml  A3_invalid_Base_time_format.xml  A3_invalid_total_estimate_value.xml  A3_missing_Ied_element.xml  A3_missing_Substation_element.xml  A3_multiple_errors.xml  A4_ied_item_missing_DeviceId.xml  A4_system_missing_CheckTime.xml
test/xml/valid/: A2_valid_with_zone.xml  A3_valid_simple_with_step.xml  A4_valid_multi_sections.xml
test/xsd/: common_types.xsd  mnt_rpt.xsd  setting_check.xsd
tests/: CMakeLists.txt  测试说明.md
tests/core/validation/: InputValidatorTest.cpp  XmlValidatorTest.cpp
tests/gui/: ValidationResultPresenterTest.cpp
tests/infrastructure/logging/: LoggerTest.cpp
tests/infrastructure/xerces/: XercesErrorHandlerTest.cpp  XercesSchemaValidatorTest.cpp  XercesStringTest.cpp  XercesTestFixture.h
tests/xml/invalid/: A2_fatal_bad_nesting.xml  A2_fatal_no_quotes.xml  A2_fatal_special_char.xml  A2_fatal_unclosed_tag.xml  A2_invalid_float_value.xml  A2_invalid_maxoccurs.xml  A2_invalid_time_format.xml  A2_missing_CompareTemplate.xml  A2_missing_Result_element.xml  A2_missing_ied_name.xml  A2_multiple_errors.xml  A3_fatal_special_char.xml  A3_fatal_well_formedness.xml  A3_invalid_base_type.xml  A3_invalid_step_type_range.xml  A3_invalid_step_value.xml  A3_missing_Base_element.xml  A3_missing_mandatory_step.xml  A3_missing_required_attr.xml  A3_step_invalid_estimate.xml  A4_alarm_item_invalid_IsDifferent.xml  A4_alarm_section_missing_Item.xml  A4_fatal_special_char.xml  A4_fatal_well_formedness.xml  A4_invalid_CheckTime_format.xml  A4_invalid_numeric_bounds.xml  A4_missing_Ied_summary.xml  A4_missing_System_element.xml  A4_missing_choice_section.xml  A4_multiple_errors.xml  XML 补充文件说明.md  xml_bomb.xml
tests/xml/invalid/XML 文件说明/: XML 补充文件说明.md
tests/xml/valid/: A2_valid_simple_ok.xml  A3_valid_full_with_steps.xml  A4_valid_simple_with_detail.xml
tests/xsd/: A2-A4报告XSD说明.md  check_report.xsd
